  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Improved extension SPL (Marcus).
  . added standard hierarchy of Exception classes
  . added interface Countable
  . added interfaces Subject and Observer
  . added spl_autoload*() functions
  . converted several 5.0 examples into c code
  . added class File
- Added several new functions to support the PostgreSQL v3 protocol introduced 
  in PostgreSQL 7.4. (Christopher)
  . pg_transaction_status() - in-transaction status of a database connection.
  . pg_query_params() - execution of parameterized queries.
  . pg_prepare() - prepare named queries.
  . pg_execute() - execution of named prepared queries.
  . pg_send_query_params() - async equivalent of pg_query_params().
  . pg_send_prepare() - async equivalent of pg_prepare().
  . pg_send_execute() - async equivalent of pg_execute().
  . pg_result_error_field() - highly detailed error information, 
    most importantly the SQLSTATE error code.
  . pg_set_error_verbosity() - set verbosity of errors.
- Added optional fifth parameter "count" to preg_replace_callback() and
  preg_replace() to count the number of replacements made. FR #32275. (Andrey)
- Added optional third parameter "charlist" to str_word_count() which
  contains characters to be considered as word part. FR #31560. (Andrey, Ilia)
- Added interface Serializeable. (Stanislav, Marcus)
- Added pg_field_type_oid() PostgreSQL function. (mauroi at digbang dot com)
- Added zend_declare_property_...() and zend_update_property_...()
  API functions for bool, double and binary safe strings. (Hartmut)
- Added new classes in mysqli: mysqli_driver, mysqli_warning, mysqli_exception,
  and mysqli_sql_exception. (Georg)
- Added possibility to access INI variables from within .ini file. (Andrei)
- Added constructors for mysqli_stmt and mysqli_result classes. (Georg)