@@ -28,6 +28,8 @@ PHP                                                                        NEWS
   . added spl_autoload*() functions
   . converted several 5.0 examples into c code
   . added class File
+- Added the ability to override the autotools executables used by the buildconf
+  script via the PHP_AUTOCONF and PHP_AUTOHEADER environmental variables. (Jon)
 - Added several new functions to support the PostgreSQL v3 protocol introduced 
   in PostgreSQL 7.4. (Christopher)
   . pg_transaction_status() - in-transaction status of a database connection.
